Added name to the copyright line

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <p>I am a 3rd year Computing student. I like computing but I have always thought that web development was not my cup of tea. However, as we delve deeper and deeper into this course, INFO2180, and what web development is about, I find that my opinion is gradually changing into a more positive one.  </p>
  </main>
  <footer>
- <p>Copyright &copy; 2021 <Sabrina Graham>.</p>
+ <p>Copyright &copy; 2021 Sabrina Graham.</p>
  </footer>
 </body>
 </html>
